# jjforge

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  comments.jsonl  issue.json
.claude-plugin/: plugin.json
.claude/agents/: blog-post-reviewer.md
.woodpecker/: blog.yaml
blog/: STYLE.md  USER_STORIES.md  WRITING.md  config.toml
blog/content/: _index.md
blog/content/posts/: 2026-06-21-five-questions-five-subagents-one-bookmark.md
blog/plans/: 2026-06-21-five-questions-five-subagents-one-bookmark.md  _template.md
crates/iss/: Cargo.toml
crates/iss-merge/: Cargo.toml
crates/iss-merge/src/: merge.rs
crates/iss-merge/tests/: integration.rs
crates/iss-merge/tests/fixtures/: concurrent_title.conflict  v1_record_pretty.conflict
crates/iss-storage/: Cargo.toml
crates/iss-storage/src/: cache.rs  git.rs  history.rs  id.rs  lib.rs  memory.rs  merge_ops.rs  op.rs  read.rs  record.rs  sync_v3.rs  trailer.rs  v3_write.rs
crates/iss-storage/tests/: integration.rs  proptest_harness.rs  search.rs  stale.rs  v3_read_path.rs  v3_write_path.rs
crates/iss/src/: main.rs  preflight.rs
crates/iss/tests/: abandon.rs  actor.rs  assign.rs  block.rs  body_validation.rs  claim.rs  close.rs  comment.rs  concurrent_write.rs  dep.rs  init.rs  label.rs  ls.rs  memory.rs  new.rs  no_jj.rs  priority.rs  push_pull.rs  ready.rs  remote.rs  search.rs  show.rs  stale.rs  title_validation.rs  type_and_slug.rs  update.rs
crates/iss/tests/common/: mod.rs
crates/jjf/: Cargo.toml
crates/jjf-merge/: Cargo.toml
crates/jjf-merge/src/: lib.rs  merge.rs  parser.rs
crates/jjf-merge/tests/: integration.rs
crates/jjf-storage/: Cargo.toml
crates/jjf-storage/src/: cache.rs  git.rs  history.rs  id.rs  jj.rs  lib.rs  memory.rs  merge_ops.rs  migrate_v2_v3.rs  op.rs  read.rs  record.rs  sync_v3.rs  trailer.rs  v3_write.rs
crates/jjf-storage/tests/: integration.rs  proptest_harness.rs  search.rs  stale.rs  v2_to_v3_migration.rs  v3_read_path.rs  v3_write_path.rs
crates/jjf/src/: main.rs  preflight.rs
crates/jjf/tests/: abandon.rs  actor.rs  assign.rs  block.rs  body_validation.rs  claim.rs  close.rs  comment.rs  concurrent_write.rs  dep.rs  init.rs  label.rs  ls.rs  memory.rs  new.rs  no_jj.rs  priority.rs  push_pull.rs  ready.rs  remote.rs  search.rs  self_host_guard.rs  show.rs  stale.rs  title_validation.rs  type_and_slug.rs  update.rs
crates/jjf/tests/common/: mod.rs
docs/: agent-await-gates-design.md  architecture.md  cli-json.md  git-bug-cutover.md  host-asterinas-audit.md  host-asterinas-dispatch.md  quickstart.md  storage-format.md  storage-index-design.md  storage-out-of-tree.md
docs/handoffs/: 2026-06-22-continue-mvp-ready-work.md  2026-06-23-qa-redteam.md  2026-06-23-storage-out-of-tree.md  2026-06-28-parent-flag-followup-bugs.md  2026-06-30-git-issues-operator-actions.md
docs/superpowers/plans/: 2026-06-25-qa-redteam-sweep.md  2026-06-28-drop-epic-label.md  2026-06-29-pr4-metadata-fixes.md  2026-06-30-git-issues-rename-jj-removal.md
docs/superpowers/specs/: 2026-06-25-qa-redteam-sweep-design.md  2026-06-28-drop-epic-label-design.md  2026-06-29-pr4-metadata-fixes-design.md  2026-06-30-git-issues-rename-jj-removal-design.md
experiments/distributed-edit/: README.md  test-five-scenarios.sh  test-followup-distance-and-recovery.sh
experiments/jj-changelog/: CHANGELOG.md
experiments/jj-cli-overhead/: README.md
experiments/jj-shellout-hello/: Cargo.toml  README.md
experiments/jj-shellout-hello/src/: main.rs
experiments/op-log/: README.md
experiments/qa-redteam-2026-06-25/: README.md  lib.sh  sub1-dataloss.sh  sub2-wronganswer.sh  sub3-panic.sh  sub4-contractdrift.sh
experiments/scale-index/: Cargo.toml  README.md
experiments/storage-shape/: README.md  test-shape-a-bookmark.sh  test-shape-b-side-channel.sh  test-shape-c-files-on-main.sh
experiments/sync-remote/: README.md
scripts/: new-blog-post.py
skills/subagent-working-a-git-issues-issue/: SKILL.md
skills/subagent-working-a-jjforge-issue/: SKILL.md
skills/using-git-issues/: SKILL.md
skills/using-jjforge/: SKILL.md
(+9 files in other folders)
