[package]
name = "iss-merge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parse jj content-conflict markers and merge jjforge bug JSON records per field policy."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
