[package]
name = "iss-merge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Merge-driver library for git-issues — reconciles concurrent issue-record edits per field policy."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
