[package]
name = "jjf-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Write-path library for jjforge's on-disk storage format (v1) — shells out to `jj` and lands one commit per mutation on the `bugs` bookmark."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Property-based tests for the storage mutate/read surface.
# Test-only — see `tests/proptest_harness.rs` for the harness.
# Issue `df74809` (qa-proptest-harness).
proptest = "1.11"
