[package]
name = "jj-shellout-hello"
version = "0.1.0"
edition = "2024"

# Intentionally tiny: serde_json is the only thing we need to parse
# `jj log -T 'json(self)'` output. Everything else is std + Command.
#
# Compare to a cargo-add jj-lib transitive graph — see ../README.md
# in this experiment.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
